@@ -34,10 +34,10 @@ OS name: "windows 7", version: "6.1", arch: "amd64", family: "windows"
             <version>3.7.0</version>
             <configuration>
                 <compilerArgs>
-                    <arg>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</arg>
-                    <arg>--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED</arg>
-                    <arg>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
-                    <arg>--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED</arg>
+                    <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                    <arg>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</arg>
+                    <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+                    <arg>--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</arg>
                 </compilerArgs>
                 <source>11</source>
                 <target>11</target>
@@ -62,7 +62,7 @@ OS name: "windows 7", version: "6.1", arch: "amd64", family: "windows"
 jdeps --multi-release 11 --jdk-internals -R --class-path 'libs/*' $project
 ```
 
-结果类似如下 
+结果类似如下, 凡是用到`jdk8internals`的包都要检查运行时有没有被调用到，如果没被调用，可以安全升级（因为不兼容）
 
 ```java  
 $ jdeps  --multi-release 11 --jdk-internals -R --class-path './dep/*' ./lib/*.jar
@@ -265,16 +265,10 @@ sun.reflect.Reflection                   Use java.lang.StackWalker @since 9
 sun.security.x509.X500Name               Use javax.security.auth.x500.X500Principal @since 1.4
 
 ```
-  
+
 ## step 5: 构建
   
 `mvn clean install -Dmaven.test.skip=true`  
-  
-## step 6: 运行时
-  
-运行时也要添加如上命令行参数  
-  
-`java xxx --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED --add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED`
   
 一些依赖包升级
 ```java  
@@ -292,6 +286,44 @@ sun.security.x509.X500Name               Use javax.security.auth.x500.X500Princi
 </dependency>
 
 ```
+
+## step 6: 运行时
+
+运行时可能会有如下cglib警告 
+```java  
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by net.sf.cglib.core.ReflectUtils$1 (file:/C:/Users/chenby/.m2/repository/cglib/cglib/3.3.0/cglib-3.3.0.jar) to method java.lang.ClassLoader.defineClass(java.lang.String,byte[],int,int,java.security.ProtectionDomain)
+WARNING: Please consider reporting this to the maintainers of net.sf.cglib.core.ReflectUtils$1
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future release
+```
+
+处理这个警告需要在运行时添加`--add-opens=$module/$package=ALL-UNNAMED`, 根据警告上的`java.lang.ClassLoader.defineClass`关键字， 如上警告运行时需要添加`--add-opens=java.base/java.lang=ALL-UNNAMED`,以便让cglib可以反射调用私有方法, 具体参考[What's the difference between --add-exports and --add-opens in Java 9?](https://stackoverflow.com/questions/44056405/whats-the-difference-between-add-exports-and-add-opens-in-java-9)  
+  
+根据jdeps的依赖分析，以及cglib需要添加的参数，总结出实际的运行时需要添加如下参数  
+
+```java  
+--add-opens=java.base/java.lang=ALL-UNNAMED 
+--add-opens=java.base/sun.nio.ch=ALL-UNNAMED 
+--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED 
+--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED 
+--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED 
+--add-opens=java.base/sun.security.util=ALL-UNNAMED 
+--add-opens=java.base/sun.security.x509=ALL-UNNAMED 
+--add-opens=java.xml/com.sun.org.apache.xpath.internal=ALL-UNNAMED 
+--add-opens=java.xml/com.sun.org.apache.xml.internal.utils=ALL-UNNAMED 
+```
+
+一些废弃的jvm options，如下参数已经删除或者废弃，其中`-XX:+AggressiveOpts` 标记为`deprecated`但仍然能够使用, `snmp`已经完全废弃. gc相关的参数可以另行替代
+```java  
+-Dcom.sun.management.snmp.port=$port -Dcom.sun.management.snmp.acl=false -Dcom.sun.management.snmp.interface=0.0.0.0 -XX:+AggressiveOpts -verbose:gc -XX:+PrintGCCause -XX:+PrintGCDateStamps -XX:+PrintGCApplicationStoppedTime
+```
+
+替代如上gc相关参数, 可以把stdout改成`file=/path/to/gc.log` 把相关gc日志保存到指定文件, 例子只输出到stdout
+```java  
+-Xlog:gc,safepoint:stdout:time
+```
+
 # 一些有用的链接
 
 * [All You Need To Know For Migrating To Java 11](https://blog.codefx.org/java/java-11-migration-guide/)
